change img, css files

--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/299bf75cea.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Mateusz_Jabłoński_CV</title>
 </head>
 
@@ -24,7 +24,7 @@
                     <a href="https://github.com/Junioru96" target="_blank" class="btn-github"><i class="fa-brands fa-square-github"></i></a>
 
                 </div>
-                <img src="/img/cv.jpg" alt="Zdjęcie CV" class="resume__header-img">
+                <img src="./img/cv.jpg" alt="Zdjęcie CV" class="resume__header-img">
                 <div class="resume__header-text">
                     <h1>Mateusz Jabłoński</h1>
                     <div class="resume__header-text-contact">
@@ -57,7 +57,7 @@
                 <ul class="resume__skills-list"">
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/code-dots.svg" alt="">
+                            <img src="./img/icons/code-dots.svg" alt="">
                             <h4>HTML, CSS</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -67,7 +67,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/code.svg" alt="">
+                            <img src="./img/icons/code.svg" alt="">
                             <h4>JavaScript</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -77,7 +77,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/robot.svg" alt="">
+                            <img src="./img/icons/robot.svg" alt="">
                             <h4>AI</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -86,7 +86,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/groups_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                            <img src="./img/icons/groups_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                             <h4>Praca zespołowa</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -95,7 +95,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/message-circle.svg" alt="">
+                            <img src="./img/icons/message-circle.svg" alt="">
                             <h4>Komunikacja</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -104,7 +104,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/sync_problem_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                            <img src="./img/icons/sync_problem_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                             <h4>Rozwiązywanie problemów</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -126,24 +126,24 @@
                 <h2 class="section-title">zainteresowania</h2>
                 <div class="resume__interests-container">
                     <div class="resume__interests-box">
-                        <img src="/img/icons/stadia_controller_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                        <img src="./img/icons/stadia_controller_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                         <p>Gry komputerowe</p>
                     </div>
                     <div class="resume__interests-box">
-                        <img src="/img/icons/mountain.svg" alt="">
+                        <img src="./img/icons/mountain.svg" alt="">
                         <p>Wspinaczka skałkowa</p>
                     </div>
                     <div class="resume__interests-box">
-                        <img src="/img/icons/monitoring_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                        <img src="./img/icons/monitoring_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                         <p>Rynki finansowe</p>
                     </div>
                     <div class="resume__interests-box">
-                        <img src="/img/icons/tank.svg" alt="">
+                        <img src="./img/icons/tank.svg" alt="">
                         <p>Militaria</p>
                     </div>
                 </div>
             </section>
-            <script src="/js/main.js"></script>
+            <script src="./js/main.js"></script>
         </div>
     </div>
 
