--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/299bf75cea.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Mateusz_Jabłoński_CV</title>
 </head>
 
@@ -61,7 +61,7 @@
                 <ul class="resume__skills-list"">
                     <li class=" resume__skills-box">
                     <div class="resume__skills-box-title">
-                        <img src="/img/icons/code-dots.svg" alt="">
+                        <img src="./img/icons/code-dots.svg" alt="">
                         <h4>HTML, CSS</h4>
                     </div>
                     <div class="resume__skills-box-text">
@@ -72,7 +72,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/code.svg" alt="">
+                            <img src="./img/icons/code.svg" alt="">
                             <h4>JavaScript</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -82,7 +82,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/robot.svg" alt="">
+                            <img src="./img/icons/robot.svg" alt="">
                             <h4>AI</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -91,7 +91,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/groups_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                            <img src="./img/icons/groups_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                             <h4>Praca zespołowa</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -101,7 +101,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/message-circle.svg" alt="">
+                            <img src="./img/icons/message-circle.svg" alt="">
                             <h4>Komunikacja</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -111,7 +111,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/sync_problem_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                            <img src="./img/icons/sync_problem_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                             <h4>Rozwiązywanie problemów</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -133,19 +133,19 @@
                 <h2 class="section-title">zainteresowania</h2>
                 <div class="resume__interests-container">
                     <div class="resume__interests-box">
-                        <img src="/img/icons/stadia_controller_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                        <img src="./img/icons/stadia_controller_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                         <p>Gry komputerowe</p>
                     </div>
                     <div class="resume__interests-box">
-                        <img src="/img/icons/mountain.svg" alt="">
+                        <img src="./img/icons/mountain.svg" alt="">
                         <p>Wspinaczka skałkowa</p>
                     </div>
                     <div class="resume__interests-box">
-                        <img src="/img/icons/monitoring_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                        <img src="./img/icons/monitoring_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                         <p>Rynki finansowe</p>
                     </div>
                     <div class="resume__interests-box">
-                        <img src="/img/icons/tank.svg" alt="">
+                        <img src="./img/icons/tank.svg" alt="">
                         <p>Militaria</p>
                     </div>
                 </div>
