--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/299bf75cea.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Mateusz_Jabłoński_Resume</title>
 </head>
 
@@ -25,7 +25,7 @@
                             class="fa-brands fa-square-github"></i></a>
 
                 </div>
-                <img src="/img/cv.jpg" alt="Zdjęcie CV" class="resume__header-img">
+                <img src="./img/cv.jpg" alt="Zdjęcie CV" class="resume__header-img">
                 <div class="resume__header-text">
                     <h1>Mateusz Jabłoński</h1>
                     <div class="resume__header-text-contact">
@@ -61,7 +61,7 @@
                 <ul class="resume__skills-list"">
                     <li class=" resume__skills-box">
                     <div class="resume__skills-box-title">
-                        <img src="/img/icons/code-dots.svg" alt="">
+                        <img src="./img/icons/code-dots.svg" alt="">
                         <h4>HTML, CSS</h4>
                     </div>
                     <div class="resume__skills-box-text">
@@ -71,7 +71,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/code.svg" alt="">
+                            <img src="./img/icons/code.svg" alt="">
                             <h4>JavaScript</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -81,7 +81,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/robot.svg" alt="">
+                            <img src="./img/icons/robot.svg" alt="">
                             <h4>AI</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -90,7 +90,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/groups_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                            <img src="./img/icons/groups_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                             <h4>Teamwork</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -99,7 +99,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/message-circle.svg" alt="">
+                            <img src="./img/icons/message-circle.svg" alt="">
                             <h4>Communication</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -109,7 +109,7 @@
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
-                            <img src="/img/icons/sync_problem_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                            <img src="./img/icons/sync_problem_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                             <h4>Problem Solving</h4>
                         </div>
                         <div class="resume__skills-box-text">
@@ -132,19 +132,19 @@
                 <h2 class="section-title">interests</h2>
                 <div class="resume__interests-container">
                     <div class="resume__interests-box">
-                        <img src="/img/icons/stadia_controller_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                        <img src="./img/icons/stadia_controller_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                         <p>Computer Games</p>
                     </div>
                     <div class="resume__interests-box">
-                        <img src="/img/icons/mountain.svg" alt="">
+                        <img src="./img/icons/mountain.svg" alt="">
                         <p>Rock Climbing</p>
                     </div>
                     <div class="resume__interests-box">
-                        <img src="/img/icons/monitoring_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                        <img src="./img/icons/monitoring_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                         <p>Financial Markets</p>
                     </div>
                     <div class="resume__interests-box">
-                        <img src="/img/icons/tank.svg" alt="">
+                        <img src="./img/icons/tank.svg" alt="">
                         <p>Military</p>
                     </div>
                 </div>
