changed img in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             class="fa-brands fa-square-github"></i></a>
 
                 </div>
-                <img src="/img/cv.jpg" alt="Zdjęcie CV" class="resume__header-img">
+                <img src="./img/cv.jpg" alt="Zdjęcie CV" class="resume__header-img">
                 <div class="resume__header-text">
                     <h1>Mateusz Jabłoński</h1>
                     <div class="resume__header-text-contact">
