--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <section class="resume__header section-padding">
                 <div class="resume__header-buttons">
                     <button class="btn-pdf"><i class="fa-solid fa-file-pdf"></i></button>
-                    <a href="cv.html" class="btn-language"><i class="fa-solid fa-language"></i></a>
+                    <a href="resume.html" class="btn-language"><i class="fa-solid fa-language"></i></a>
                     <a href="https://github.com/Junioru96" target="_blank" class="btn-github"><i
                             class="fa-brands fa-square-github"></i></a>
 
