--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
                 <div class="resume__experience-box">
                     <p class="resume__experience-company"><i class="fa-solid fa-briefcase"></i>Rossmann
                         SDP. - Internal Audit Department Employee </p>
-                    <p class="resume__experience-date">2019/10 - obecnie</p>
+                    <p class="resume__experience-date">2019/10 - present</p>
                     <ul>
                         <li>Managing alarm systems, optimizing performance, and implementing tools to improve processes.
                         </li>
