--- a/resume.html
+++ b/resume.html
@@ -149,7 +149,7 @@
                     </div>
                 </div>
             </section>
-            <script src="/js/main.js"></script>
+            <script src="./js/main.js"></script>
         </div>
     </div>
 
